[tool.poetry]
name = "igsn-website"
version = "0.1.0"
description = "The UBC International Graduate Student Network website."
authors = ["awakenedhaki <rodrigo.vallejosch@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "igsn_website"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
